# englishify

./: Dockerfile  README.md  app.py  pyproject.toml
.devcontainer/: devcontainer.json
static/: app.js  index.html  main.css
