[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disa2ble = "missing-function-docstring,missing-class-docstring"

[tool.black]
line-length = 120

[tool.poetry]
name = "englishify"
license = "MIT"
version = "0.0.1"
description = "Introducing the front-end for Chat-GPT, designed to assist in writing English text with a native-like fluency."
authors = ["Simon Marache-Francisco <englishify@simon.marache.net>"]

[tool.poetry.dependencies]
fastapi = "^0.94.0"
uvicorn = "^0.21.0"
openai = "1.2.3"
python = ">=3.10"
sentry-sdk = { version = "^1.16.0", extras = ["fastapi"] }

[tool.poetry.group.dev.dependencies]
black = "*"
pylint = "*"
